--- a/README.tex
+++ b/README.tex
@@ -64,8 +64,9 @@
 
 \section{Disclaimer}\label{section:disclaimer}
 
-You are not guaranteed an interview let alone a job offer. At the bare minimum,
-you are guaranteed to have at least one person looking at your resume.
+This program does not guarantee a referral, interview, nor offer. At the
+bare minimum, you are guaranteed to have at least one person looking at your
+resume.
 
 If at any point you provide your contact information outside the confines of
 this program, you are responsible for any messages and/or spam you
@@ -120,6 +121,10 @@ If you no longer want to give referrals, notify Pratik Bhusal.
     if you provide your contact information to a requester, you are responsible
     for any communication that does not go through this program.
 }
+
+\section{Opt-out Process}
+
+If you no longer wish to participate, please let Pratik Bhusal know.
 
 \section{Potential/Frequently Asked Questions}
 
