Add alternative requester eligibility requirement & Data storage QA

--- a/README.tex
+++ b/README.tex
@@ -48,7 +48,8 @@
 
 \pagestyle{empty} % Remove Page Numbers
 
-\newcommand{\minSemesters}{3}
+\newcommand{\pratikMinSemesters}{2}
+\newcommand{\bossMinSemesters}{3}
 \newcommand{\currentBoss}{Jason Smith}
 \newcommand{\QA}[2]{\textit{#1}\medskip
 
@@ -94,8 +95,10 @@ walking towards a more permanent, establish path.
 
 \subsection{Requester}
 
-\currentBoss{} wants a minimum of \minSemesters{} semesters  worked at the CSMC
-to be eligible for the program.
+For mentors currently employed at the CSMC, \currentBoss{} wants a minimum of
+\bossMinSemesters{} semesters worked at the CSMC to be eligible for the program.
+
+If you have graduated, Pratik Bhusal requires \pratikMinSemesters{} semesters.
 
 \subsection{Referrer}
 
@@ -153,6 +156,12 @@ If you no longer wish to participate, please let Pratik Bhusal know.
 
             In the case of a financial incentive, companies \textit{may} provide
             a financial incentive to employees for successful candidate hirings.
+        }
+    \item\QA%
+        {How is my information stored?}
+        {
+            It is stored on Google spreadsheets. Automatic data encryption is
+            desired, but still in the brainstorming phase.
         }
 \end{enumerate}
 
