Fix incorrect text for referrer opt-in process

--- a/README.tex
+++ b/README.tex
@@ -133,7 +133,9 @@ in the program.
 
 \subsection{Referrer}
 
-If you no longer want to give referrals, notify Pratik Bhusal.
+If you want to give referrals and Pratik Bhusal has not contacted you already,
+notify Pratik Bhusal through the github issue request page or through Pratik
+Bhusal's email address associated with this program.
 
 \note{%
     As mentioned in the \hyperref[section:disclaimer:spamMessages]{disclaimer},
