Match title to repo name

--- a/README.tex
+++ b/README.tex
@@ -65,7 +65,7 @@
 \begin{document}
 
 \begin{center}
-    \bfseries\Large CSMC Alumni Referral Program
+    \bfseries\Large CSMC Referral Program
 \end{center}
 
 \section{Disclaimer}\label{section:disclaimer}
