--- a/README.tex
+++ b/README.tex
@@ -46,7 +46,8 @@
 
 \pagestyle{empty} % Remove Page Numbers
 
-\newcommand{\minSemesters}{2}
+\newcommand{\minCompleteInternshipRequirementSemesters}{1}
+\newcommand{\minCompleteFullTimeRequirementSemesters}{2}
 \newcommand{\currentBoss}{Jason Smith}
 \newcommand{\QA}[2]{\textit{#1}\medskip
 
@@ -62,9 +63,7 @@
 
 \section{Disclaimer}\label{section:disclaimer}
 
-This program does not guarantee a referral, interview, nor offer. At the
-bare minimum, you are guaranteed to have at least one person looking at your
-resume.
+This program does not guarantee a referral, interview, nor offer.
 
 If at any point you provide your contact information outside the confines of
 this program, you are responsible for any messages and/or spam you
@@ -92,8 +91,25 @@ walking towards a more permanent, established path.
 
 \subsection{Requester}
 
-You are eligible to request referrals if and only if you have worked at least
-\minSemesters{} semesters at the CSMC.
+If you have worked at least \minCompleteFullTimeRequirementSemesters{} complete
+semesters at the CSMC, you are eligible to request internship and full-time
+referrals.
+
+To account for special situations, below are the notable exceptions depending on
+the type of referral request you seek and the conditions to be eligible to
+recieve said referral type:
+
+\begin{enumerate}
+    \item \textbf{Iternship Only}: If you have worked at least
+        \minCompleteInternshipRequirementSemesters{} complete semester(s) at the
+        CSMC and will start working on the next semester at the CSMC, you are
+        eligible to request \textit{internship} referrals.
+    \item \textbf{Full-Time}: If you have worked at least
+        \minCompleteInternshipRequirementSemesters{} complete semester(s) at the
+        CSMC, will start working on the next semester at the CSMC, in your last
+        year before graduating, \textit{and} not pursuing any further education
+        at the university, you are eligible to request full-time referrals.
+\end{enumerate}
 
 \subsection{Referrer}
 
