Add hint to which contact method should be used

--- a/README.tex
+++ b/README.tex
@@ -189,6 +189,12 @@ If you no longer wish to participate, please let Pratik Bhusal know.
                     program.\\\textbf{Hint:} repository-name (at) fullname (dot) com
 
             \end{enumerate}
+
+            If you have a general question applicable to more than just you,
+            prefer using option 1.
+
+            If you have a specific question that pertains only to your
+            situation, use option 2.
         }
 \end{enumerate}
 
