Add tips section

--- a/resume-template/resume.tex
+++ b/resume-template/resume.tex
@@ -298,4 +298,40 @@
         {Fall 20XX -- Fall 20YY}
 \end{itemize}%}}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Miscellaneous Tips/Tricks/Hints}%{{{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\textbf{Note:} This section should not be in the final version of your resume.
+This section exists only to help you write the above actual sections that you
+will present to companies.
+
+\subsection*{Guidelines for Writing Experience \& Project Bullet Points}
+The first bullet point should effectively be a sales pitch. It should tell me
+why the project worthy of being put on the resume and hook the recruiter into
+what you are capable of doing. After that, provide the details of what you
+worked on.
+
+\medskip
+
+For writing both a good sales pitch bullet point and the following details
+bullet point(s), there are handful of way to writing them. Here are some
+approaches I am aware of:
+
+\begin{enumerate}
+    \item (What did you accomplish?) - (Do you have any numbers to back up the
+        importance of your accomplishment?) - (How did you achieve what you
+        accomplished?)
+    \item (What did you accomplish?) - (What tool/technique(s) did you use?) -
+        (how was the tool/technique(s) used to accomplish the feat?)
+    \item (What did you accomplish?)  - (why did you do it?) - (how did you
+        accomplish it?)
+    \item (What did you accomplish?)  - (how did you accomplish it?)
+\end{enumerate}
+
+The key point is that you always state what you accomplished and how you did it.
+Prefer using approaches 1--3. Use approach 4 as a last resort.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document} % }}}
